infra/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: next-js
  labels:
    name: next-js
